--- a/admin/win/docker/Dockerfile
+++ b/admin/win/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM opensuse:42.1
+FROM opensuse/leap:15.5
 
 ENV TERM ansi
 ENV HOME /root
@@ -6,16 +6,14 @@ ENV HOME /root
 ENV REFRESHED_AT 20170113
 
 RUN zypper --non-interactive --gpg-auto-import-keys refresh
-RUN zypper --non-interactive --gpg-auto-import-keys ar http://download.opensuse.org/repositories/windows:/mingw/openSUSE_Leap_42.1/windows:mingw.repo
-RUN zypper --non-interactive --gpg-auto-import-keys ar http://download.opensuse.org/repositories/isv:ownCloud:toolchains:mingw:win32:2.3/openSUSE_Leap_42.1/isv:ownCloud:toolchains:mingw:win32:2.3.repo
+RUN zypper --non-interactive --gpg-auto-import-keys ar https://download.opensuse.org/repositories/windows:/mingw:/win32/openSUSE_Leap_15.5/windows:mingw:win32.repo
 RUN zypper --non-interactive --gpg-auto-import-keys install cmake make mingw32-cross-binutils mingw32-cross-cpp mingw32-cross-gcc \
-                      mingw32-cross-gcc-c++ mingw32-cross-pkg-config mingw32-filesystem \
-                      mingw32-headers mingw32-runtime site-config mingw32-libwebp mingw32-libssp0 \
-                      mingw32-cross-libqt5-qmake mingw32-cross-libqt5-qttools mingw32-libqt5* \
-                      mingw32-qt5keychain* mingw32-angleproject* \
-                      mingw32-cross-nsis mingw32-libopenssl* \
-                      mingw32-sqlite* png2ico \
-                      osslsigncode wget
+                      mingw32-cross-gcc-c++ mingw32-filesystem \
+                      mingw32-headers mingw32-runtime site-config mingw32-libssp0 \
+                      mingw32-angleproject* \
+                      mingw32-cross-nsis mingw32-libopenssl-devel mingw32-libopenssl \
+                      mingw32-sqlite* \
+                      wget
 
 # RPM depends on curl for installs from HTTP
 RUN zypper --non-interactive --gpg-auto-import-keys install curl
