Add macOS related configs to craftmaster.ini
Signed-off-by: Claudio Cambra <claudio.cambra@nextcloud.com>

--- a/craftmaster.ini
+++ b/craftmaster.ini
@@ -15,6 +15,8 @@ CreateCache = False
 # Category is case sensitive
 [GeneralSettings]
 
+General/MacDeploymentTarget = 10.15
+
 ## This is the location of your python installation.
 ## This value must be set.
 Paths/Python = C:\Python39-x64
@@ -42,6 +44,13 @@ Packager/UseCache = ${Variables:UseCache}
 Packager/CreateCache = ${Variables:CreateCache}
 Packager/CacheDir = ${Variables:Root}\cache
 
+#CodeSigning/Enabled = ${Env:SIGN_PACKAGE}
+#CodeSigning/Protected = True
+#CodeSigning/Certificate = ${Env:CRAFT_CODESIGN_CERTIFICATE}
+#CodeSigning/CommonName =
+#CodeSigning/MacDeveloperId = ownCloud GmbH (4AP2STM4H5)
+#CodeSigning/MacKeychainPath = sign-${Env:DRONE_BUILD_NUMBER}.keychain
+
 [BlueprintSettings]
 # don't try to pip install on the ci
 python-modules.ignored = True
@@ -53,3 +62,22 @@ binary/mysql.useMariaDB = False
 [windows-msvc2019_64-cl]
 QtSDK/Compiler = msvc2019_64
 General/ABI = windows-msvc2019_64-cl
+
+[macos-64-clang]
+General/ABI = macos-64-clang
+# Packager/PackageType = MacPkgPackager
+
+[macos-64-clang-debug]
+General/ABI = macos-64-clang
+Compile/BuildType = Debug
+
+[macos-clang-arm64]
+General/ABI = macos-clang-arm64
+
+[macos-clang-arm64-debug]
+General/ABI = macos-clang-arm64
+Compile/BuildType = Debug
+
+[Env]
+CRAFT_CODESIGN_CERTIFICATE =
+SIGN_PACKAGE = False
